--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ background{
     background-image: url("https://i.pinimg.com/originals/82/5e/cd/825ecdb71b9e60890115229b25bceef8.jpg");
     background-repeat: repeat-x;
 }
+button{
+display: : inline-block;
+/* 
+float: right;
+ */
+
+}
+h3{
+display: inline-block;
+text-align: center;
+}
 #map
 {
 width: 100%
